# dopflow

./: .gitignore
control_board/fw/phantom_control/: .gitignore  .mxproject  CMakeLists.txt  STM32F303VCTX_FLASH.ld  phantom_control.ioc
control_board/fw/phantom_control/Core/Inc/: stm32f3xx_it.h
control_board/fw/phantom_control/Core/Src/: main.c  motor.c  stm32f3xx_hal_msp.c  stm32f3xx_hal_timebase_tim.c  stm32f3xx_it.c
control_board/fw/phantom_control/cmake/stm32cubemx/: CMakeLists.txt
software/: README.md  heart_rate.py  make_custom_pulses.py  pyproject.toml  speed_control.py
